--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ python = "^3.11"
 aiohttp = "^3.9.1"
 tomli = "^2.0.1"
 setuptools = "^69.0.3"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.0"
+
 [build-system]
 requires = [
     "setuptools",
