--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ setuptools = "^69.0.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
+pytest-asyncio = "^0.23.5"
 
 [build-system]
 requires = [
@@ -21,3 +22,6 @@ requires = [
     "tomli",
 ]
 build-backend = "setuptools.build_meta"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
