--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ setuptools = "^69.0.3"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
 pytest-asyncio = "^0.23.5"
+black = "^24.2.0"
 
 [build-system]
 requires = [
