--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ setuptools = "^69.0.3"
 pytest = "^8.0.0"
 pytest-asyncio = "^0.23.5"
 black = "^24.2.0"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = [
