--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,17 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install poetry
         poetry install
+
     - name: Test with pytest
       run: |
         poetry run pytest
+
+    - name: Test with pytest and cov
+      if: matrix.python-version == '3.12'
+      run: |
+        poetry run pytest --cov=./ --cov-report=xml
+
+    - name: Upload coverage data to coveralls.io
+      if: matrix.python-version == '3.12'
+      run: |
+          coveralls --service=github
