--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,4 +50,4 @@ jobs:
     - name: Upload coverage data to coveralls.io
       if: matrix.python-version == '3.12'
       run: |
-          coveralls --service=github
+          poetry run coveralls --service=github
