--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,13 @@ python-dotenv = "^1.0.1"
 pytest-cov = "^5.0.0"
 coveralls = "^4.0.0"
 
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^7.3.7"
+readthedocs-sphinx-search = "^0.3.2"
+furo = "^2024.4.27"
+sphinx-hoverxref = "^1.3.0"
+
 [build-system]
 requires = [
     "setuptools",
