--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "shikimori"}]
 
 [tool.poetry.dependencies]
 python =  ">=3.10,<3.13"
-aiohttp = ">=3.9.1"
+aiohttp = "^3.9.1"
 tomli = "^2.0.1"
 setuptools = "^69.0.3"
 
