--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ readme = "README.md"
 packages = [{include = "shikimori"}]
 
 [tool.poetry.dependencies]
-python =  ">=3.10,<3.13"
-aiohttp = "^3.9.1"
+python = "^3.10"
+aiohttp = "^3.8.3"
 tomli = "^2.0.1"
 setuptools = "^69.0.3"
 
@@ -18,7 +18,6 @@ pytest-asyncio = "^0.23.5"
 black = "^24.2.0"
 python-dotenv = "^1.0.1"
 pytest-cov = "^5.0.0"
-coveralls = "^4.0.0"
 
 
 [tool.poetry.group.docs.dependencies]
